src/index.css
/* Fonts Reference */
/* font-family: 'Satisfy', cursive; */

body {
  backface-visibility: hidden;
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-image: linear-gradient(#008080, #00b386);
  min-height: 100vh;
  color: white;
}

body a {
  text-decoration: none;
}

body img {
  backface-visibility: hidden;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* Card Index -------------------------------------- Card Index */

.card-index {
  text-align: center;
  position: relative;
}

/* --- */

/* Card Component */

.card-component {
  background: #0086b3;
  backface-visibility: hidden;
  border: solid #4d1a00 2px;
  border-radius: 3%;
  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
  cursor: pointer;
  display: inline-block;
  height: 300px;
  margin: 5px;
  overflow: hidden;
  position: relative;
  width: 200px;
  z-index: -1;
}

.card-component-back {
  background: grey;
  backface-visibility: hidden;
  border: solid #4d1a00 2px;
  border-radius: 3%;
  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
  cursor: pointer;
  height: 300px;
  position: absolute;
  top: 5px;
  transform: rotateY(180deg);
  left: 5px;
  width: 200px;
  z-index: 500;
  /* visibility: hidden; */
}

.card-component-flip-container {
  border: solid white 2px;
  height: 314px;
  position: relative;
  perspective: 500px;
  width: 214px;
}

.card-component-flip-container-inner {
  height: 100%;
  position: relative;
  transition: transform 0.8s;
  transform: rotateY(180deg);
  transform-style: preserve-3d;
  width: 100%;
}

@keyframes card-flip-up {
  from { transform: rotateY(180deg) }
  to { transform: rotateY(0) }
}

.card-component-inspect {
  height: 125vw;
  left: 15vw;
  max-height: 700px;
  max-width: 529px;
  position: absolute;
  width: 100vw;
  z-index: 100;
}

.card-component-inspect-inner {
  background: #0086b3;
  border: solid #4d1a00 2px;
  border-radius: 3%;
  box-shadow: 1px 3px 2px rgba(0,0,0,0.2);
  float: left;
  height: 100%;
  overflow: auto;
  width: 90%;
}

.card-description {

  width: 90%;
}

.card-description-reversal {

}

.card-illustration {
  margin: auto;
  margin-top: 5%;
  width: 90%;
  height: 75%;
  overflow: hidden;
  border: solid #4d1a00 2px;
}

.card-name {
  color: white;
  font-family: 'Satisfy', cursive;
  position: absolute;
  top: 86%;
  width: 100%;
}

.card-name-inspect {
  color: white;
  font-family: 'Satisfy', cursive;
  font-size: 2em;
  position: absolute;
  top: 86%;
  transition: linear width 1s, height 1s, top 1s, left 1s;
  width: 90%;
}

/* Card Tabs ------------------------------------------- Card Tabs */

.card-tab-index {
  z-index: -1;
  float: left;
  width: 9%;
  height: 100%;
  text-align: center;
}

.card-tab {
  font-size: 1.2em;
  font-family: 'Satisfy', cursive;
  position: relative;
  top: 5%;
  background: green;
  width: 120%;
  cursor: pointer;
  border: 2px #4d1a00 solid;
  border-left: none;
}

.card-tab-exit {

}

.card-tab-description {

}

.card-tab-illustration {

}

.card-tab-reversal {

}

.card-animation {
  position: relative;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  height: 105%;
  width: 105%;
  overflow: hidden;
  background: black;
}

.card-fit-height {
  height: 100%;
  position: relative;
}

.card-fit-width {
  width: 100%;
  position: relative;
}

/* ----------- */

/* Illustration Animations ------------------------ Illustration Animations */

@keyframes death-pulse {
  0% { background: #003300 }
  20% { background: #003300 }
  100% { background: #006600 }
}

.death-pulse {
  animation: death-pulse 4s infinite alternate;
}

/* Raven Feather */
@keyframes featherfall-one {
  0% { top: 30%; right: 20%; }
  100% { top: 90%; right: 120%; }
}

@keyframes featherfall-two {
  0% { top: 35%; right: 10%; }
  100% { top: 70%; right: 120%; }
}

@keyframes featherfall-three {
  0% { top: 40%; right: 15%; }
  100% { top: 50%; right: 120%; }
}

@keyframes featherfall-four {
  0% { top: 40%; right: 0%; }
  100% { top: 30%; right: 120%; }
}

@keyframes featherfall-five {
  0% { top: 40%; right: 0%; }
  100% { top: 110%; right: 120%; }
}
/* ---------- */

@keyframes firefly {
  0% { opacity: 0 }
  25% { opacity: 1 }
  75% { opacity: 0 }
  100% { opacity: 0 }
}

.animation-firefly {
  animation: firefly 12s infinite;
}

@keyframes inkblot {
  0% { filter: blur(0) opacity(0) }
  80% { filter: blur(0) opacity(0) }
  95% { filter: blur(0) opacity(0.9) }
  100% { filter: blur(1px) opacity(1) }
}

.inkblot {
  animation: inkblot 16s linear;
  filter: blur(1px)
}

@keyframes rainbow-shift {
  from { filter: hue-rotate(0deg) }
  to { filter: hue-rotate(360deg) }
}

.rainbow-shift {
  animation: rainbow-shift 10s infinite linear;
}

@keyframes rotate {
  from { transform: rotate(0deg)}
  to { transform: rotate(360deg)}
}

.animation-rotate-medium {
  animation: rotate 20s infinite linear;
}

.animation-rotate-slow {
  animation: rotate 30s infinite linear;
}

.animation-rotate-slower {
  animation: rotate 40s infinite linear;
}

.animation-rotate-slowest {
  animation: rotate 60s infinite linear;
}

@keyframes thunder {
  0% { filter: brightness(1); }
  0.5% { filter: brightness(5); }
  1% { filter: brightness(3); }
  1.5% { filter: brightness(5); }
  3% { filter: brightness(1); }
  100% { filter: brightness(1); }
}

.thunder {
  animation: thunder 15s infinite linear;
}

/* ---------- */

/* Header ----------------------------------- Header */

.title {
  margin: 5px;
}

/* ---------- */

/* Lesson --------------------------------------------- Lesson */

.lesson-buttons {
  text-align: center;
  width: 100%;
}

.lesson-buttons p {
  border: solid white 2px;
  border-radius: 5px;
  cursor: pointer;
  display: inline-block;
  padding: 1em;
}

.lesson-container {
  background: black;
  border: 2px white solid;
  border-radius: 5px;
  left: 10vw;
  min-height: 60vh;
  position: absolute;
  text-align: center;
  width: 80vw;
  z-index: 100;
}

.lesson-container p {
  margin: 1em;
}

.lesson-exit-button {
  background: black;
  border: solid white 10px;
  border-radius: 100%;
  color: white;
  cursor: pointer;
  height: 20px;
  position: absolute;
  right: -1em;
  top: -1em;
  width: 20px;
}

.lesson-image {
  display: inline-block;
  float: left;
  height: 420px;
  margin-top: 1em;
  margin-left: 2%;
  width: 280px;
}

.lesson-text {
  display: inline-block;
  float: left;
  margin-top: 2%;
  margin-left: 2%;
  min-height: 395px;
  min-width: 300px;
  text-align: left;
  width: 60%;
}

/* ---------- */

/* Login & Signup ------------------------------- Login & Signup */

.user-signup-login-container {
  margin: 10px;
}

/* ---------- */

/* Navbar --------------------------------------- Navbar */

.navbar {
  width: 100%;
  height: 2em;
  display: inline-block;
  border: solid black 2px;
}

.navbar-left {
  text-align: left;
  display: inline-block;
  float: left;
  width: 50%
}

.navbar a {
  color: white;
  margin-right: 1em;
  margin-left: 5px;
}

.navbar-right {
  text-align: right;
  display: inline-block;
  float: left;
  width: 49%
}

/* ---------- */

/* Spread Components ------------------------------------- Spread Components */

.table-card-container {
  text-align: center;
  width: 100%;
}

.position-container-threecard {
  text-align: center;
  width: 25%;
  display: inline-block;
}

/* ---------- */

